# flux

./: .gitignore  LICENSE  README.md  create-icon.ps1  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: lib.rs
