[package]
name = "flux"
version = "0.1.0"
description = "Flux - PDF Viewer moderno y minimalista"
authors = ["Marko <Dauphinsss@github>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/Dauphinsss"
repository = "https://github.com/Dauphinsss/flux"

[lib]
name = "flux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-store = "2.0"
